--- a/docs/api-reference/data/timeseries/note.mdx
+++ b/docs/api-reference/data/timeseries/note.mdx
@@ -82,12 +82,11 @@ import (
 
   vital "github.com/tryVital/vital-go"
   vitalclient "github.com/tryVital/vital-go/client"
-  "github.com/tryVital/vital-go/option"
 )
 
 client := vitalclient.NewClient(
-  option.WithApiKey("<YOUR_API_KEY>"),
-  option.WithBaseURL(vital.Environments.Sandbox),
+  vitalclient.WithApiKey("<YOUR_API_KEY>"),
+  vitalclient.WithBaseURL(vital.Environments.Sandbox),
 )
 
 EndDate := "2022-06-01"
@@ -116,7 +115,7 @@ fmt.Printf("Received data %s\n", response)
           {
             "end": "2023-02-13T14:30:52+00:00",
             "start": "2023-02-13T14:30:52+00:00",
-            "type": [
+            "tags": [
               "food",
               "exercise"
             ],
