Update docs about WHOOP

--- a/docs/snippets/byoo.mdx
+++ b/docs/snippets/byoo.mdx
@@ -1,4 +1,4 @@
 <Info>
 Bring Your Own OAuth (BYOO) is available for [the Grow and Scale plans](https://tryvital.io/pricing).
-Whoop BYOO is available for [the Launch, Grow and Scale plans](https://tryvital.io/pricing), while Vital hosted Whoop app  is only available for the Scale plan.
+WHOOP BYOO is available for [the Launch, Grow and Scale plans](https://tryvital.io/pricing). See [our WHOOP Guide](/wearables/guides/whoop) for more information.
 </Info>
