--- a/docs/wearables/connecting-providers/auth_types.mdx
+++ b/docs/wearables/connecting-providers/auth_types.mdx
@@ -30,7 +30,7 @@ Current OAuth providers are:
 | `Polar`      | Finnish sports tech pioneer                                   |
 | `Cronometer` | Nutrition data                                                |
 | `Omron`      | Blood Pressure data                                           |
-| `Whoop`      | Smart Activity Watches                                        |
+| `WHOOP`      | Smart Activity Watches                                        |
 | `Dexcom`     | Glucose monitors                                              |
 
 To connect an oauth provider:
