--- a/docs/wearables/guides/whoop.mdx
+++ b/docs/wearables/guides/whoop.mdx
@@ -1,34 +1,21 @@
 ---
-title: "Whoop"
+title: "WHOOP"
 ---
 
 <Info>
-Whoop [Bring Your Own OAuth](/wearables/connecting-providers/bring_your_own_oauth) is available for [the Launch, Grow and Scale plans](https://tryvital.io/pricing), while Vital hosted Whoop app  is only available for the Scale plan.
+WHOOP [Bring Your Own OAuth](/wearables/connecting-providers/bring_your_own_oauth) is available for [the Launch, Grow and Scale plans](https://tryvital.io/pricing).
 </Info>
 
-## Connecting Whoop to Vital
+## Connecting WHOOP to Vital
 
-Whoop is a [BYOO](/wearables/connecting-providers/bring_your_own_oauth) only provider, so you will need your own app in [Whoop's developer dashboard](https://developer-dashboard.whoop.com/).
+WHOOP is a [BYOO](/wearables/connecting-providers/bring_your_own_oauth) only provider, so you will need your own app in [WHOOP's developer dashboard](https://developer-dashboard.WHOOP.com/).
 
-Then, you can configure the Whoop integration in the Vital dashboard by navigating to the Config > Custom Credentials page and clicking "Setup" next to Whoop V2.
-![Whoop V2 config](/img/whoop_config.png)
+Then, you can configure the WHOOP integration in the Vital dashboard by navigating to the Config > Custom Credentials page and clicking "Setup" next to WHOOP V2.
+![WHOOP V2 config](/img/WHOOP_config.png)
 
-### Vital Hosted Whoop Apps ([Scale Plan](https://tryvital.io/pricing))
-If you are on the Scale plan, Vital can host your Whoop app. To set this up you will need to provide us with the following information:
+## Limitations
 
-1. Name of contact:
-    * Provide the name of the person who will be the main point of contact for the integration.
-2. Name of the Company:
-    * Provide the official name of your company.
-3. Desired Name for Sandbox and Prod Applications:
-    * Specify names for your sandbox and production applications.
-4. Projected Number of Users:
-    * Estimate the number of users utilizing the WHOOP API.
-5. Expected number of API calls per minute / per day.
-    * Estimate the number of API calls per minute and per day.
-6. Intended Use of the WHOOP API:
-    * Briefly outline the use case for your product (e.g. who are your users, what benefits will they derive from the integration, etc )
-7. Preferred Timeline for Integration Release:
-    * Indicate your preferred timeline for releasing the integration to your users.
+WHOOP sets forth the following limitation:
+>Apps can be used for development immediately with a limit of 10 WHOOP members. To launch your app to all WHOOP members, you must first submit your app for approval.
 
-You can share this information via Slack or by emailing [support@tryvital.io](mailto:support@tryvital.io).
+Learn more about app approval in the [WHOOP developer documentation](https://developer.whoop.com/docs/developing/app-approval/). WHOOP reviews apps on a monthly cadence.
