--- a/docs/wearables/providers/timestamps-and-time-zones.mdx
+++ b/docs/wearables/providers/timestamps-and-time-zones.mdx
@@ -65,7 +65,7 @@ Each provider has their own affinity of time zone information:
 | [Renpho](https://renpho.com)                             `renpho`               | _N/A_                           | ✅                               | Absent                           | |
 | [Strava](https://www.strava.com)                         `strava`               | _N/A_                           | ✅                               | ✅                               | |
 | [Wahoo](https://wahoofitness.com)                        `wahoo`                | _N/A_                           | Absent                           | _N/A_                            | |
-| [Whoop](https://www.whoop.com)                           `whoop_v2`             | ✅                              | ✅                               | _N/A_                            | |
+| [WHOOP](https://www.whoop.com)                           `whoop_v2`             | ✅                              | ✅                               | _N/A_                            | |
 | [Zwift](https://zwift.com)                               `zwift`                | _N/A_                           | User Fallback, or Absent         | _N/A_                            | |
 | [Withings](https://www.withings.com)                     `withings`             | ✅                              | ✅                               | ✅                               | |
 | [iHealth](https://ihealthlabs.com)                       `ihealth`              | _N/A_                           | ✅                               | Absent                           | |
