--- a/docs/snippets/historical-pull-limits.mdx
+++ b/docs/snippets/historical-pull-limits.mdx
@@ -9,7 +9,7 @@
 | [Renpho](https://renpho.com)                                                 | 180 days     | ✅           | - |
 | [Strava](https://www.strava.com)                                             | 14 days      | ✅           | - |
 | [Wahoo](https://wahoofitness.com)                                            | 180 days     | ✅           | - |
-| [Whoop](https://www.whoop.com)                                               | 180 days     | ✅           | - |
+| [WHOOP](https://www.whoop.com)                                               | 180 days     | ✅           | - |
 | [Zwift](https://zwift.com)                                                   | 270 days     | ✅           | - |
 | [Withings](https://www.withings.com)                                         | 90 days      | ✅           | - |
 | [8Sleep](https://www.eightsleep.com)                                         | 90 days      | ✅           | - |
