--- a/docs/wearables/connecting-providers/bring-your-own-oauth/overview.mdx
+++ b/docs/wearables/connecting-providers/bring-your-own-oauth/overview.mdx
@@ -34,7 +34,7 @@ Some BYOO providers do not have a developer program with open sign-up.
 | [Wahoo](https://wahoofitness.com)                    | `wahoo`           | -                                      |
 | [Withings](https://www.withings.com)                 | `withings`        | -                                      |
 | [Dexcom](https://www.dexcom.com)                     | `dexcom_v3`       | [↗️ Guide](/wearables/guides/dexcom_v3) |
-| [Whoop](https://www.whoop.com)                       | `whoop_v2`        | [↗️ Guide](/wearables/guides/whoop)     |
+| [WHOOP](https://www.whoop.com)                       | `whoop_v2`        | [↗️ Guide](/wearables/guides/whoop)     |
 | [Polar](https://www.polar.com/accesslink-api/)       | `polar`           | -                                      |
 | [Cronometer](https://www.cronometer.com)             | `cronometer`      | -                                      |
 | [Omron](https://www.omron-healthcare.com)            | `omron`           | -                                      |
@@ -58,7 +58,7 @@ This section documents the _starting_ rate limit of a brand new OAuth applicatio
 | [Wahoo](https://wahoofitness.com)                    | 200 requests per 5 minutes<br />1,000 requests per hour<br />5,000 requests per day |
 | [Withings](https://www.withings.com)                 | 120 requests per minute                                                             |
 | [Dexcom](https://www.dexcom.com)                     | 60,000 requests per hour                                                            |
-| [Whoop](https://www.whoop.com)                       | 100 requests per minute<br />10,000 requests per day                                |
+| [WHOOP](https://www.whoop.com)                       | 100 requests per minute<br />10,000 requests per day                                |
 | [Polar](https://www.polar.com/accesslink-api/)       | 20 requests per 15 minutes per user<br />100 requests per day per user              |
 | [Cronometer](https://www.cronometer.com)             | N/A                                                                                 |
 | [Omron](https://www.omron-healthcare.com)            | N/A                                                                                 |
@@ -94,7 +94,7 @@ BYOO credentials for the following providers are immediately active, once set th
 | [Wahoo](https://wahoofitness.com)                    | `wahoo`           |
 | [Withings](https://www.withings.com)                 | `withings`        |
 | [Dexcom](https://www.dexcom.com)                     | `dexcom_v3`       |
-| [Whoop](https://www.whoop.com)                       | `whoop_v2`        |
+| [WHOOP](https://www.whoop.com)                       | `whoop_v2`        |
 | [Polar](https://www.polar.com/accesslink-api/)       | `polar`           |
 | [Cronometer](https://www.cronometer.com)             | `cronometer`      |
 | [Omron](https://www.omron-healthcare.com)            | `omron`           |
