--- a/docs/api-reference/horizon-ai/aggregation/overview.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/overview.mdx
@@ -27,14 +27,23 @@ The query schema and the behaviour is subject to change based on beta feedback.
 The Horizon AI Aggregation Query can be utilised through two different solutions:
 
 ### Aggregation API
-
-A real-time API enabling quick data analysis for individual users, offering:
-- Flexible aggregation and arithmetic capabilities
-- Dynamic query adjustment, making it ideal for interactive dashboards and data exploration
+* Rapid Insights: Ideal for quick analysis, allowing developers to experiment with individual user data immediately.
+* Flexible Outputs: Produces easy-to-use DataFrames that work seamlessly with popular data analysis tools.
+* Cost and Time Efficiency: Get aggregated insights without having to dump all user data from the API.
+* Build Dynamic Dashboards: Queries are adjustable and executed in real time, suitable for dynamic dashboards that need to support flexible adjustments of query based on user inputs.
 
 ### Continuous Query
+* Automatic Evaluation: Best suited for scenarios requiring ongoing data monitoring and updates, automatically re-evaluating queries when new data is available.
+* Streamlined Workflows: Minimizes manual effort and efficiently manages large datasets, making it ideal for continuous reporting and collaboration within teams.
+* Pushed Changes: New and changed query results are pushed to you as webhooks via svix or ETL Pipelines
 
-An automatic system running queries continuously in the background, which:
-- Enables team-wide aggregations, triggered only as data changes are detected
-- Is great for visualisation of results on known, mature aggregation queries
-- Can push aggregation results to your webhook endpoints / ETL pipelines
+### Decision Guide
+<Steps>
+<Step title="Experiment with Aggregation API">
+    Start with Aggregation API if you need quick insights, one-time analysis or query experimentation using an individual user's data.
+</Step>
+<Step title="Productize with Continuous Query">
+    Switch to Continuous Query once you have queries which you wish to turn into a continuously updated, named dataset and to receive change events for.
+</Step>
+</Steps>
+Choose based on your current needs — rapid analysis and iteration with Aggregation API or continual data monitoring with Continuous Query. Both features use the same Query DSL, complement each other and can adapt as your product evolves.
