Editorial pass on Continuous Query documentation

--- a/docs/api-reference/horizon-ai/aggregation/overview.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/overview.mdx
@@ -17,16 +17,16 @@ experimentations.
 Work with time zone agnostic outputs that are indexed in the user's perception of time (i.e., _floating time_).
 </Card>
 
-## Aggregation API and Continuous Query
+## Query API and Continuous Query
 
 <Warning>
-Aggregation API and Continuous Query are currently in closed beta.
+Query API and Continuous Query are currently in closed beta.
 The query schema and the behaviour is subject to change based on beta feedback.
 </Warning>
 
-The Horizon AI Aggregation Query can be utilised through two different solutions:
+You can use Horizon AI Aggregation Query through two mediums:
 
-### Aggregation API
+### Query API
 * Rapid Insights: Ideal for quick analysis, allowing developers to experiment with individual user data immediately.
 * Flexible Outputs: Produces easy-to-use DataFrames that work seamlessly with popular data analysis tools.
 * Cost and Time Efficiency: Get aggregated insights without having to dump all user data from the API.
@@ -39,11 +39,11 @@ The Horizon AI Aggregation Query can be utilised through two different solutions
 
 ### Decision Guide
 <Steps>
-<Step title="Experiment with Aggregation API">
-    Start with Aggregation API if you need quick insights, one-time analysis or query experimentation using an individual user's data.
+<Step title="Experiment with Query API">
+    Start with Query API if you need quick insights, one-time analysis or query experimentation using an individual user's data.
 </Step>
 <Step title="Productize with Continuous Query">
     Switch to Continuous Query once you have queries which you wish to turn into a continuously updated, named dataset and to receive change events for.
 </Step>
 </Steps>
-Choose based on your current needs — rapid analysis and iteration with Aggregation API or continual data monitoring with Continuous Query. Both features use the same Query DSL, complement each other and can adapt as your product evolves.
+Choose based on your current needs — rapid analysis and iteration with Query API or continual data monitoring with Continuous Query. Both features use the same Query DSL, complement each other and can adapt as your product evolves.
