--- a/docs/api-reference/horizon-ai/aggregation/query-one.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/query-one.mdx
@@ -4,7 +4,7 @@ openapi: post /aggregate/v1/user/{user_id}/query
 ---
 
 <Warning>
-Aggregation API is currently in closed beta.
+Query API is currently in closed beta.
 The query schema and the behaviour is subject to change based on beta feedback.
 </Warning>
 
