--- a/docs/api-reference/horizon-ai/aggregation/using-query-api.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/using-query-api.mdx
@@ -1,8 +1,8 @@
 ---
-title: Using Aggregation API
+title: Using Query API
 ---
 
-You can make use of Vital Aggregation API through these channels:
+You can make use of the Query API through these mediums:
 
 | Channel | Remarks |
 | ------- | ------- |
