--- a/docs/api-reference/horizon-ai/continuous-query/create.mdx
+++ b/docs/api-reference/horizon-ai/continuous-query/create.mdx
@@ -8,6 +8,6 @@ import OrgManagementAPI from '/snippets/org-management-api.mdx';
 <OrgManagementAPI />
 
 <Warning>
-Aggregation API is currently in closed beta.
+Continuous Query is currently in closed beta.
 The query schema and the behaviour is subject to change based on beta feedback.
 </Warning>
