--- a/docs/api-reference/horizon-ai/continuous-query/get-result-table.mdx
+++ b/docs/api-reference/horizon-ai/continuous-query/get-result-table.mdx
@@ -4,6 +4,6 @@ openapi: get /aggregate/v1/user/{user_id}/continuous_query/{query_id_or_slug}/re
 ---
 
 <Warning>
-Aggregation API is currently in closed beta.
+Continuous Query is currently in closed beta.
 The query schema and the behaviour is subject to change based on beta feedback.
 </Warning>
