--- a/docs/api-reference/data/activity/get-summary.mdx
+++ b/docs/api-reference/data/activity/get-summary.mdx
@@ -42,7 +42,7 @@ const request: ActivityGetRequest = {
     endDate: "2022-06-01"
 }
 
-const data = await client.activity.getRaw(
+const data = await client.activity.get(
     '<my_user_id>',
     request
 );
