[OPS-38] add problem in transit statuses

--- a/docs/api-reference/lab-testing/cancel-order.mdx
+++ b/docs/api-reference/lab-testing/cancel-order.mdx
@@ -593,6 +593,8 @@ fmt.Printf("Received data %s\n", response)
                   "collecting_sample.testkit.out_for_delivery",
                   "collecting_sample.testkit.with_customer",
                   "collecting_sample.testkit.transit_lab",
+                  "collecting_sample.testkit.problem_in_transit_customer",
+                  "collecting_sample.testkit.problem_in_transit_lab",
                   "sample_with_lab.testkit.delivered_to_lab",
                   "completed.testkit.completed",
                   "failed.testkit.failure_to_deliver_to_customer",
