--- a/docs/lab/testkits/order-lifecycle.mdx
+++ b/docs/lab/testkits/order-lifecycle.mdx
@@ -26,6 +26,8 @@ possible low-level status are:
 - `delivered_to_lab`: The lab has received the testkit.
 - `failure_to_deliver_to_customer`: The shipping company was unable to deliver the testkit to the customer.
 - `failure_to_deliver_to_lab`: The shipping company was unable to deliver the testkit to the lab.
+- `problem_in_transit_customer`: The shipping company encountered a problem while delivering the testkit to the customer.
+- `problem_in_transit_lab`: The shipping company encountered a problem while delivering the testkit to the lab.
 - `sample_error`: The collected sample was unprocessable by the lab.
 - `completed`: The laboratory processed the blood sample and final results are available.
 - `cancelled`: The order was cancelled by either the patient, Vital or you.
@@ -50,6 +52,8 @@ in the following diagram.
 - `delivered_to_lab`: The lab has received the testkit.
 - `failure_to_deliver_to_customer`: The shipping company was unable to deliver the testkit to the customer.
 - `failure_to_deliver_to_lab`: The shipping company was unable to deliver the testkit to the lab.
+- `problem_in_transit_customer`: The shipping company encountered a problem while delivering the testkit to the customer.
+- `problem_in_transit_lab`: The shipping company encountered a problem while delivering the testkit to the lab.
 - `sample_error`: The collected sample was unprocessable by the lab.
 - `completed`: The laboratory processed the blood sample and final results are available.
 - `cancelled`: The order was cancelled by either the patient, Vital or you.
