--- a/docs/lab/workflow/lab-test-lifecycle.mdx
+++ b/docs/lab/workflow/lab-test-lifecycle.mdx
@@ -65,6 +65,8 @@ Below is a full list of all the available statuses by test modality. The names s
 - `collecting_sample.testkit.out_for_delivery`
 - `collecting_sample.testkit.with_customer`
 - `collecting_sample.testkit.transit_lab`
+- `collecting_sample.testkit.problem_in_transit_customer`
+- `collecting_sample.testkit.problem_in_transit_lab`
 - `sample_with_lab.testkit.delivered_to_lab`
 - `completed.testkit.completed`
 - `failed.testkit.failure_to_deliver_to_customer`
@@ -97,4 +99,3 @@ Below is a full list of all the available statuses by test modality. The names s
 - `sample_with_lab.at_home_phlebotomy.partial_results`
 - `completed.at_home_phlebotomy.completed`
 - `cancelled.at_home_phlebotomy.cancelled`
-
