--- a/docs/wearables/providers/data-ingestion-bounds.mdx
+++ b/docs/wearables/providers/data-ingestion-bounds.mdx
@@ -2,23 +2,35 @@
 title: "Data Ingestion Bounds"
 ---
 
-## Data collection time bounds
+By default, Vital:
 
-By default, all user connections in Vital system have no data collection time bounds set. 
-Vital will fetch historical data up to the provider's [limit](/wearables/providers/introduction#historical-days-retrieved) and continue to fetch new data daily until the connection is deregistered.
+* pulls historical data as far back as indicated by the [pull preferences](/wearables/providers/introduction#customizing-historical-data-pull-range)
+  you specified (if any), or the [default historical pull range](/wearables/providers/introduction#historical-data-pull-range).
+
+* accepts **all** new and changed data discovered through polling, incoming provider webhooks and Vital Mobile SDK integrations.
+
+If you need to impose a date bounds on the data being collected, you can set **data ingestion bounds** on a per-user basis:
+
+* The data ingestion bounds restricts the historical pull range of any new connections of the user.
+
+* The data ingestion bounds restricts data ingestion from any connections of the user — out of bound data are dropped.
+
+* When the user ingestion end date is reached, a 7-day late delivery catchment period starts. Once the catchment
+  period expires, all connections of the user are automatically de-registered and marked as _paused_.
+
+<Note>
+Because _dates_ are in floating time, you should expect an error margin of ±1 days on ingestion bound enforcement.
+If you cannot tolerate an error margin, offset the user data ingestion bounds you set accordingly.
+</Note>
 
 ##  Setting Ingestion Start and End Dates
 
-You can set and update the Ingestion Start and End Dates during:
+You can specify the user data ingestion bounds (`ingestion_start` and `ingestion_end`) when you:
 
-* [Creating a new user](/api-reference/user/create-user); or
+* [Create a new user](/api-reference/user/create-user); or
 
-* [Patching an existing user](/api-reference/user/patch-user)
+* [Update an existing user](/api-reference/user/patch-user)
 
-
-<Info>
-If no ingestion bounds are set, data will be fetched continuously without any restrictions
-</Info>
 
 ```json Example
 {
@@ -30,3 +42,17 @@ If no ingestion bounds are set, data will be fetched continuously without any re
   "ingestion_end": "2024-12-15",
 }
 ```
+
+
+## Changing Ingestion Bounds
+
+You can change the ingestion bounds at any time.
+
+However, do note that it has no retrospective effect on data already ingested — Vital does not delete collected data
+in response to ingestion bound changes.
+
+As long as the connection has not been marked as _paused_, you can change the ingestion end date to extend the ingestion
+bounds at any time, even during the (post ingestion end) 7-day late delivery catchment period.
+
+Otherwise, the ingestion end date has no effect on any _paused_ cloud-based connections — since these connections have been
+deregistered with the data provider, the end user needs to go through the Vital Link flow to re-connect.
