Add data prioritization docs on Aggregation Query

--- a/docs/wearables/providers/data-ingestion-bounds.mdx
+++ b/docs/wearables/providers/data-ingestion-bounds.mdx
@@ -2,6 +2,8 @@
 title: "Data Ingestion Bounds"
 ---
 
+## Overview
+
 By default, Vital:
 
 * pulls historical data as far back as indicated by the [pull preferences](/wearables/providers/introduction#customizing-historical-data-pull-range)
