--- a/docs/home/welcome.mdx
+++ b/docs/home/welcome.mdx
@@ -2,14 +2,18 @@
 title: "Welcome to our Docs"
 sidebarTitle: "Welcome"
 mode: wide
-description: "Here you'll find guides, resources, and references to build using Vital's APIs and SDKs."
+description: "Here you'll find guides, resources, and references to build using Junction's APIs and SDKs."
 ---
 
+<Note>
+  We've just **rebranded from Vital to Junction**. You may see some references to
+  Vital among the docs, please bear with us as we get this updated.
+</Note>
 <CardGroup cols={2}>
   <Card title="Quickstart" icon="bolt" color="#FDD023" href="/home/quickstart">
-    The Quickstart walk-through gives you an overview of how to integreate with
-    Vital. By the end of this guide, you'll have a working app with both backend
-    and frontend.
+    The Quickstart walk-through gives you an overview of how to integrate with
+    Junction. By the end of this guide, you'll have a working app with both
+    backend and frontend.
   </Card>
   <Card
     title="Providers"
@@ -37,7 +41,7 @@ description: "Here you'll find guides, resources, and references to build using 
     color="#BF40BF"
     href="/lab/overview/introduction"
   >
-    Vital’s lab test API allows digital health companies to carry out at-home
+    Junction’s lab test API allows digital health companies to carry out at-home
     lab testing. Companies can use the API to order a variety of tests, using
     various sampling methods.
   </Card>
@@ -46,38 +50,59 @@ description: "Here you'll find guides, resources, and references to build using 
 ## Popular Topics
 
 <CardGroup cols={1}>
-  <Card title="Apple HealthKit" icon="apple" href="/wearables/guides/apple-healthkit" horizontal>
-    Learn how to integrate with Apple HealthKit through Vital Mobile SDKs, available in
-    Native iOS, React Native and Flutter.
-  </Card>
-  <Card title="Android Health Connect" icon="android" href="/wearables/guides/android-health-connect" horizontal>
-    Learn how to integrate with Android Health Connect through Vital Mobile SDKs, available in
-    Native Android, React Native and Flutter.
+  <Card
+    title="Apple HealthKit"
+    icon="apple"
+    href="/wearables/guides/apple-healthkit"
+    horizontal
+  >
+    Learn how to integrate with Apple HealthKit through Junction Mobile SDKs,
+    available in Native iOS, React Native and Flutter.
   </Card>
   <Card
-    title="Vital Link Widget"
+    title="Android Health Connect"
+    icon="android"
+    href="/wearables/guides/android-health-connect"
+    horizontal
+  >
+    Learn how to integrate with Android Health Connect through Junction Mobile
+    SDKs, available in Native Android, React Native and Flutter.
+  </Card>
+  <Card
+    title="Junction Link Widget"
     icon="link"
     href="/wearables/connecting-providers/introduction"
     horizontal
   >
-    Vital Link enables your users to connect their account with with their wearable data providers.
-    Learn how to integrate the Link Widget for a no-fuzz starter integration.
+    Junction Link enables your users to connect their account with with their
+    wearable data providers. Learn how to integrate the Link Widget for a
+    no-fuzz starter integration.
   </Card>
   <Card
-    title="Vital Link API"
+    title="Junction Link API"
     icon="link"
     href="/wearables/connecting-providers/custom_widget"
     horizontal
   >
-    Learn how to use the Vital Link API to build your own Link Widget.
+    Learn how to use the Junction Link API to build your own Link Widget.
   </Card>
-  <Card title="Timestamps and Time Zones" icon="clock" href="/wearables/providers/timestamps-and-time-zones" horizontal>
+  <Card
+    title="Timestamps and Time Zones"
+    icon="clock"
+    href="/wearables/providers/timestamps-and-time-zones"
+    horizontal
+  >
     Learn about timestamp and time zone handling of wearable device data.
   </Card>
-  <Card title="Webhooks & Events" icon="radar" href="/webhooks/introduction" horizontal>
-    Vital can push wearable device data as webhook events to you as soon as they are discovered.
-    Learn about the delivery stages, event structure as well as the advanced ETL Pipeline options
-    for high volume needs.
+  <Card
+    title="Webhooks & Events"
+    icon="radar"
+    href="/webhooks/introduction"
+    horizontal
+  >
+    Junction can push wearable device data as webhook events to you as soon as
+    they are discovered. Learn about the delivery stages, event structure as
+    well as the advanced ETL Pipeline options for high volume needs.
   </Card>
   <Card
     title="Synthetic Data"
@@ -85,7 +110,8 @@ description: "Here you'll find guides, resources, and references to build using 
     href="/wearables/providers/test_data"
     horizontal
   >
-    Learn how to use Demo Connections — which emit synthetic data mimicking selected providers — as
-    an alternative way to test your Vital integration.
+    Learn how to use Demo Connections — which emit synthetic data mimicking
+    selected providers — as an alternative way to test your Junction
+    integration.
   </Card>
 </CardGroup>
