Fix Garmin provider rate limit typo

--- a/docs/wearables/connecting-providers/bring-your-own-oauth/overview.mdx
+++ b/docs/wearables/connecting-providers/bring-your-own-oauth/overview.mdx
@@ -51,7 +51,7 @@ This section documents the _starting_ rate limit of a brand new OAuth applicatio
 | Provider                                             | Starting Rate Limit                                                                 |
 | ---------------------------------------------------- | ----------------------------------------------------------------------------------- |
 | [Fitbit](https://www.fitbit.com/global/uk/home)      | 150 requests per hour per user                                                      |
-| [Garmin](https://www.garmin.com)                     | 10,000 days of data oer minute                                                      |
+| [Garmin](https://www.garmin.com)                     | 10,000 days of data per minute                                                      |
 | [Google Fit](https://www.google.com/fit/)            | 600 requests per minute                                                             |
 | [Oura](https://ouraring.com)                         | 5,000 requests per 5 minutes                                                        |
 | [Strava](https://www.strava.com)                     | 100 requests per 15 minutes<br />1,000 requests per day                             | 
