[LAB-440] add prose docs and gate with beta

--- a/docs/api-reference/lab-testing/import-order.mdx
+++ b/docs/api-reference/lab-testing/import-order.mdx
@@ -4,6 +4,8 @@ openapi: "POST /v3/order/import"
 version: beta
 ---
 
+Importing orders is currently in closed beta.
+
 <RequestExample>
 
 ```python Python
