--- a/docs/changelog/lab-testing/api.mdx
+++ b/docs/changelog/lab-testing/api.mdx
@@ -2,6 +2,9 @@
 title: "API"
 ---
 
+### Problem in Transit Order Statuses (Mar 2025)
+Testkit orders now support two new statuses representing problems in transit. Refer to the [lab test lifecycle documentation](/lab/workflow/lab-test-lifecycle).
+
 ### Source Marker Identification for Results (Nov 2024)
 Results now feature the source, orderable marker from which they originated.
 Refer to the [documentation](/lab/results/result-formats)
